# GLM_ASR_SileroVAD

./: .gitignore  README.md  app.py  asr_handler.py  cert.pem  flash_attention_patch.py  generate_certs.sh  key.pem  pyproject.toml  run.sh  segmentation.py  stt_api_docs.md  test_api.py  test_segmentation.py  verify_full_cycle.py  verify_merged_audio.py  verify_naming.py  verify_user_audio.py
templates/: index.html
